# GUARDIAN

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETADO.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING.md.bak  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_FIX_NOTES.md  FEATURES.md  GITHUB_PAGES_SETUP.md  IDENTITY.md  LICENSE  MANIFEST.in  MERGE_THIS_NOW.md  Makefile  QUICKSTART.md  README.md  README_ACTION_REQUIRED.md  SECURITY.md  SHOWCASE.md  START_HERE.md  WEBSITE_PREVIEW.txt  WEBSITE_STATUS.md  WEB_ACCESS.md  __init__.py  _config.yml  cli.py  index.html  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  (+4 more)
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml
GUARDIAN/: UPGRADE_V2.md  __init__.py
GUARDIAN/agents/: __init__.py
GUARDIAN/agents/specialized/: __init__.py  evacuator_agent.py  honeypot_agent.py  lazarus_agent.py  network_agent.py  quantum_agent.py  swapguard_agent.py
agents/: __init__.py  requirements.txt  swarm.py
agents/bots/: __init__.py  telegram_bot.py
agents/core/: __init__.py  base_agent.py  config.py  database.py  embeddings.py  onchain.py  safety.py
agents/integrations/: __init__.py  fallback_rpc.py  helius.py  jupiter.py  pumpfun.py  solana_scanner.py
agents/specialized/: __init__.py  auditor_agent.py  coordinator_agent.py  guardian_agent.py  healer_agent.py  hunter_agent.py  intel_agent.py  oracle_agent.py  reporter_agent.py  scanner_agent.py  sentinel_agent.py
agents/tests/: __init__.py  test_agents.py  test_core.py  test_integration.py  test_safety.py
agents/webhooks/: __init__.py  server.py
app/alerts/: index.html
app/api/: evacuate_routes.py  main.py  server.py  swap_routes.py
app/check/: index.html
app/compare/: index.html
app/dashboard/: api.js  index.html  index.html.backup
app/demo/: index.html
app/faq/: index.html
app/integrations/: index.html
app/leaderboard/: index.html
app/report/: index.html
app/scam-db/: index.html
app/stats/: index.html
app/status/: index.html
app/wallet-scan/: index.html
data/: guardian.db
docs/: API.md  ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  HACKATHON_SUBMISSION.md  INSTALLATION.md  README.md  USAGE.md  WEB_VISUAL_GUIDE.md  api.html  index.html
memory/: 2026-02-03.md  2026-02-04.md
plawn/: .env.example  package-lock.json  package.json
plawn/public/: index.html  skill.md
plawn/src/: api.ts  db.ts  server.ts
programs/agent-coordinator/: Cargo.toml
programs/agent-coordinator/src/: lib.rs
programs/reasoning-registry/: Cargo.toml
programs/reasoning-registry/src/: lib.rs
programs/threat-intelligence/: Cargo.toml
programs/threat-intelligence/src/: lib.rs
scripts/: VIDEO_GUIDE.md  add_license_headers.py  demo.py  demo_simulation.py  demo_test.py  demo_video.py  run_full_demo.py  run_swarm.py  setup.py
tests/: reasoning-registry.ts  threat-intelligence.ts
widget/: index.html
