[package]
name = "agent-coordinator"
version = "0.1.0"
description = "Multi-agent swarm coordination for Solana Immune System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_coordinator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
