[package]
name = "reasoning-registry"
version = "0.1.0"
description = "On-chain reasoning registry for AI agent transparency"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reasoning_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
