[package]
name = "threat-intelligence"
version = "0.1.0"
description = "On-chain threat intelligence database for Solana security"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "threat_intelligence"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
